DATA-1944 Handle object delete in MDM