@@ -34,7 +34,7 @@ package org.rutebanken.tiamat.service.parking;
 import org.rutebanken.helper.organisation.ReflectionAuthorizationService;
 import org.rutebanken.tiamat.auth.UsernameFetcher;
 import org.rutebanken.tiamat.changelog.EntityChangedListener;
-import org.rutebanken.tiamat.changelog.LoggingService;
+import org.rutebanken.tiamat.importer.mdm.MdmService;
 import org.rutebanken.tiamat.model.DataManagedObjectStructure;
 import org.rutebanken.tiamat.model.Parking;
 import org.rutebanken.tiamat.model.StopPlace;
@@ -45,6 +45,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -61,21 +62,24 @@ public class ParkingDeleter {
     private final ReflectionAuthorizationService authorizationService;
 
     private final UsernameFetcher usernameFetcher;
-    private final ParkingRepository parkingRepository;
-    private final ReferenceResolver referenceResolver;
-    private final LoggingService loggingService;
+
+    private ParkingRepository parkingRepository;
+
+    private ReferenceResolver referenceResolver;
+
+    private final MdmService mdmService;
 
     @Autowired
     public ParkingDeleter(ParkingRepository parkingRepository,
                           EntityChangedListener entityChangedListener,
                           ReflectionAuthorizationService authorizationService,
-                          UsernameFetcher usernameFetcher, ReferenceResolver referenceResolver, LoggingService loggingService) {
+                          UsernameFetcher usernameFetcher, ReferenceResolver referenceResolver, MdmService mdmService) {
         this.parkingRepository = parkingRepository;
         this.entityChangedListener = entityChangedListener;
         this.authorizationService = authorizationService;
         this.usernameFetcher = usernameFetcher;
         this.referenceResolver = referenceResolver;
-        this.loggingService = loggingService;
+        this.mdmService = mdmService;
     }
 
     public boolean deleteParking(String parkingId) {
@@ -85,24 +89,21 @@ public class ParkingDeleter {
 
         List<Parking> parkings = parkingRepository.findByNetexId(parkingId);
 
-        if (parkings.isEmpty()) {
+        if(parkings.isEmpty()) {
             throw new IllegalArgumentException("Cannot find parking to delete from ID: " + parkingId);
         }
 
-        for (Parking parking : parkings) {
-            if (parking.getParentSiteRef() != null) {
+        for(Parking parking : parkings) {
+            if(parking.getParentSiteRef() != null) {
                 DataManagedObjectStructure resolved = referenceResolver.resolve(parking.getParentSiteRef());
-                if (resolved instanceof StopPlace) {
-                    authorizationService.assertAuthorized(ROLE_EDIT_STOPS, List.of(resolved));
+                if(resolved instanceof StopPlace) {
+                    authorizationService.assertAuthorized(ROLE_EDIT_STOPS, Arrays.asList(resolved));
                 }
             }
         }
 
-        for (Parking parking : parkings) {
-            loggingService.logParkingDeletion(usernameForAuthenticatedUser, parking);
-        }
-
         parkingRepository.deleteAll(parkings);
+        mdmService.deleteParkingsBySuperId(parkingId);
         notifyDeleted(parkings);
 
         logger.warn("All versions ({}) of parking {} deleted by user {}", parkings.size(), parkingId, usernameForAuthenticatedUser);
